real time notification ws
